--- a/n98-magerun2.yaml
+++ b/n98-magerun2.yaml
@@ -1,6 +1,6 @@
 autoloaders:
-  BitExpert\Magento\ListApiEndpoints: %module%/src
+  HiveCommerce\Magento\ListApiEndpoints: %module%/src
 
 commands:
   customCommands:
-    - BitExpert\Magento\ListApiEndpoints\Command\ListApiEndpoints
+    - HiveCommerce\Magento\ListApiEndpoints\Command\ListApiEndpoints
