--- a/phpstan.neon
+++ b/phpstan.neon
@@ -3,7 +3,7 @@ parameters:
     fileExtensions:
         - php
     paths:
-        - src/BitExpert
-        - tests/BitExpert
+        - src/HiveCommerce
+        - tests/HiveCommerce
     bootstrapFiles:
             - vendor/bitexpert/phpstan-magento/autoload.php
