--- a/composer.json
+++ b/composer.json
@@ -21,21 +21,21 @@
     }
   ],
   "require": {
-    "php": "^7.4",
-    "magento/module-webapi": "^100.4.2",
-    "magento/framework": "102.0.6|103.0.0|103.0.1|103.0.2|103.0.2-p1"
+    "php": "~7.4.0|~8.0.0",
+    "magento/module-webapi": "~100.4.0|~100.4.1|~100.4.2",
+    "magento/framework": "~102.0.7-p2|~103.0.0|~103.0.1|~103.0.2|~103.0.3"
   },
   "require-dev": {
-    "n98/magerun2": "^4.5.0",
-    "phpunit/phpunit": "^9.5",
-    "squizlabs/php_codesniffer": "^3.6",
-    "phpstan/phpstan": "^0.12.81",
-    "captainhook/captainhook": "^5.4",
-    "captainhook/plugin-composer": "^5.2",
+    "n98/magerun2": "^4.7.0",
+    "phpunit/phpunit": "^9.5.10",
+    "squizlabs/php_codesniffer": "^3.6.1",
+    "phpstan/phpstan": "^0.12.99",
+    "captainhook/captainhook": "^5.10.4",
+    "captainhook/plugin-composer": "^5.3.2",
     "bitexpert/phpstan-magento": "^0.9.0",
     "phpstan/extension-installer": "^1.1",
     "roave/security-advisories": "dev-latest",
-    "infection/infection": "^0.21.0",
+    "infection/infection": "0.22.0|^0.25.3",
     "bitexpert/captainhook-infection": "^0.5.0",
     "phpstan/phpstan-strict-rules": "^0.12.9"
   },
