--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,7 +37,7 @@ jobs:
 
       - name: Install Magento 2.3.7-p2
         if: matrix.magento == '2.3.7-p2'
-        run: composer update --with-dependencies magento/framework:102.0.7-p2 magento/module-webapi:100.4.0 infection/infection:0.22.0 n98/magerun2:4.5.0
+        run: composer update --with-dependencies magento/framework:102.0.7-p2 magento/module-webapi:100.3.6-p2 infection/infection:0.22.0 n98/magerun2:4.5.0
 
       - name: Install Magento 2.4.0
         if: matrix.magento == '2.4.0'
