--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
   ],
   "require": {
     "php": "~7.4.0|~8.0.0",
-    "magento/module-webapi": "~100.4.0|~100.4.1|~100.4.2",
+    "magento/module-webapi": "~100.3.6-p2|~100.4.0|~100.4.1|~100.4.2",
     "magento/framework": "~102.0.7-p2|~103.0.0|~103.0.1|~103.0.2|~103.0.3"
   },
   "require-dev": {
