--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,8 @@
-.phpunit.result.cache
 .idea/
-infection.log
 vendor/
+rootCA.pem
+.phpunit.result.cache
+clover.xml
+composer.phar
+infection.log
+rootCA.pem
