--- a/composer.json
+++ b/composer.json
@@ -27,13 +27,13 @@
   },
   "require-dev": {
     "bitexpert/captainhook-infection": "^0.6.0",
-    "bitexpert/phpstan-magento": "^0.22.0",
+    "bitexpert/phpstan-magento": "^0.23.0",
     "captainhook/captainhook": "^5.10.8",
     "captainhook/plugin-composer": "^5.3.3",
     "infection/infection": "0.22.0|^0.26.6",
     "n98/magerun2": "^4.5.0|^4.9.1|^5.0.1",
     "phpstan/extension-installer": "^1.1",
-    "phpstan/phpstan": "^1.5.4",
+    "phpstan/phpstan": "^1.7.2",
     "phpstan/phpstan-strict-rules": "^1.1",
     "phpunit/phpunit": "^9.5.20",
     "squizlabs/php_codesniffer": "^3.6.2"
@@ -74,7 +74,8 @@
     "allow-plugins": {
       "infection/extension-installer": true,
       "captainhook/plugin-composer": true,
-      "phpstan/extension-installer": true
+      "phpstan/extension-installer": true,
+      "magento/composer-dependency-version-audit-plugin": false
     }
   }
 }
