--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,7 @@
     "captainhook/captainhook": "^5.10.8",
     "captainhook/plugin-composer": "^5.3.3",
     "infection/infection": "0.22.0|^0.26.6",
-    "n98/magerun2": "^7.0.1",
+    "n98/magerun2": "^4.5.0|^4.9.1|^5.0.1|^6.0.1|^7.0.1",
     "phpstan/extension-installer": "^1.1",
     "phpstan/phpstan": "^1.7.2",
     "phpstan/phpstan-strict-rules": "^1.1",
